--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body {
 	-moz-transition: display .1s;
 }
 
-.next {
+#next {
 	position: absolute;
 	z-index: 10;
 	top: 0;
@@ -104,7 +104,7 @@ body {
 
 /* Text (8.2 minutes) */
 
-.text {
+#text {
 	display: none;
 	position: absolute;
 	top: 10%;
@@ -117,7 +117,7 @@ body {
 	color: rgb(235, 235, 235);
 }
 
-#clock {
+#timer {
 	position: fixed;
 	z-index: 100;
 	bottom: 1.667em;
