changes to book.html

--- a/css/book.css
+++ b/css/book.css
@@ -482,8 +482,16 @@ blockquote > p {
 	margin-top: 3em;
 }
 
+.dblapart {
+  margin-top: 6em;
+}
+
 .centered {
   text-align: center;
+}
+
+.to-right {
+  text-align: right;
 }
 
 .small {
